= Release Notes
:drivers_repo: http://ocient-archive/ocientrepo/java/jdbc

All our jdbc drivers are located {drivers_repo}[here]. 
Below is the release notes for every driver version that has customer implication.

//tag::compact[]
== 2.29 (2021-8-20)

New Features::

 * Fix the way connection resets parameters when reset is true.

//tag::compact[]
== 2.28 (2021-8-16)

New Features::

 * Fix sending parameters on reset. maxrow, maxtempdisk, maxtime, parallelism, priority now gets reset properly.
 * Map list all queries to select * from sys.queries
 * Improve logging
 * Statements with closed connections will not get returned to the cache

//tag::compact[]
== 2.27 (2021-8-10)

New Features::

 * Fixed poorly structured if statement in CLI source command.
 * Remove more stack trace printing and add more logs.

//tag::compact[]
== 2.26 (2021-7-30)

New Features::

 * Move the duplicated regex code in CLI.java and XGStatement.java into a new file.
 * Implement a generic regex for syntax checking the set family of sql commands.
 * Fix a bug in resetting commands using lower cases. "set maxrow reset;" does not work. Needs to be capitalized.

//tag::compact[]
== 2.25 (2021-7-27)

New Features::

 * Default clientVersion to 0.00 if the driver provides a null clientVersion to XGConnection.

//tag::compact[]
== 2.24 (2021-7-12)

New Features::

 * Have setSchema handle unquoted caps sql. "SET SCHEMA MADISON" will set schema to "madison".

//tag::compact[]
== 2.23 (2021-7-6)

New Features::

 * Change SET CONCURRENCY command to SET PARALLELISM 
 * Change "concurrency" driver property to "parallelism" 

//tag::compact[]
== 2.22 (2021-7-1)

New Features::

 * Add openJump extensions to jdbc jar.
 * Fix source command for plan execute inline.

//tag::compact[]
== 2.21 (2021-6-30)

New Features::

 * Fix new hashcode for null elements.


//tag::compact[]
== 2.20 (2021-6-28)

New Features::

 * Update list all queries metadata to match that of select * from sys.queries