@@ -10,6 +10,7 @@ Below is the release notes for every driver version that has customer implicatio
 New Features::
 
  * Fix the way connection resets parameters when reset is true.
+ * Fix an issue where redirect was not properly using mapped secondary interfaces
 
 //tag::compact[]
 == 2.28 (2021-8-16)
